ETOAST-97: Fix text button small styles

--- a/packages/css/src/atoms/buttons/_utils.scss
+++ b/packages/css/src/atoms/buttons/_utils.scss
@@ -49,6 +49,11 @@
       width: 80px;
       padding: 0;
 
+      &.eds-text-button {
+        height: auto;
+        width: auto;
+      }
+
       &:focus {
         padding: 0;
       }
